--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": "",
   "keywords": [],
-  "author": "Your name here",
+  "author": "so",
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.0",
